creating the new Holidays functions and update the version number

--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -25,7 +25,7 @@
         <li><a href="https://school-toolsl.github.io/horaires-lycee/horaires-lycee-version_hors_connexion.zip">Télécharger la version<br>hors connexion (.ZIP)</a></li>
 
       </ul>
-      <p id="version">v1.2.64.2</p>
+      <p id="version">v1.3.0.0</p>
     </nav>
   </aside>
 
@@ -78,6 +78,14 @@
             <div id="statut">chargement en cours...</div>
           </div>
           <div id="msgStatut" class="msg"></div>
+        </div>
+        <div class="container1">
+          <div class="container2">
+            <p id="txtHolidays">grille :</p>
+            <div id="cercleHolidays"></div>
+            <div id="holidays">chargement en cours...</div>
+          </div>
+          <div id="msgHolidays" class="msg"></div>
         </div>
         <!--
         <div id="btnToDoList">
