--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -63,29 +63,33 @@
   </header>
   <main>
       <div id="functions">
-        <div class="container1">
-          <div class="container2">
-            <p id="txtGrille">grille :</p>
-            <div id="cercleGrille"></div>
-            <div id="grille">chargement en cours...</div>
+        <div id="raw1">
+          <div class="container1">
+            <div class="container2">
+              <p id="txtGrille">grille :</p>
+              <div id="cercleGrille"></div>
+              <div id="grille">chargement en cours...</div>
+            </div>
+            <div id="msgGrille" class="msg"></div>
           </div>
-          <div id="msgGrille" class="msg"></div>
+          <div class="container1">
+            <div class="container2">
+              <p id="txtStatut">statut :</p>
+              <div id="cercleStatut"></div>
+              <div id="statut">chargement en cours...</div>
+            </div>
+            <div id="msgStatut" class="msg"></div>
+          </div>
         </div>
-        <div class="container1">
-          <div class="container2">
-            <p id="txtStatut">statut :</p>
-            <div id="cercleStatut"></div>
-            <div id="statut">chargement en cours...</div>
+        <div id="raw2">
+          <div class="container1">
+            <div class="container2">
+              <p id="txtHolidays">Décompte vacances :</p>
+              <div id="cercleHolidays"></div>
+              <div id="holidays">chargement en cours...</div>
+            </div>
+            <div id="msgHolidays" class="msg"></div>
           </div>
-          <div id="msgStatut" class="msg"></div>
-        </div>
-        <div class="container1">
-          <div class="container2">
-            <p id="txtHolidays">grille :</p>
-            <div id="cercleHolidays"></div>
-            <div id="holidays">chargement en cours...</div>
-          </div>
-          <div id="msgHolidays" class="msg"></div>
         </div>
         <!--
         <div id="btnToDoList">
