--- a/pages/principal/index.html
+++ b/pages/principal/index.html
@@ -25,7 +25,7 @@
         <li><a href="https://school-toolsl.github.io/horaires-lycee/horaires-lycee-version_hors_connexion.zip">Télécharger la version<br>hors connexion (.ZIP)</a></li>
 
       </ul>
-      <p id="version">v1.3.0.0</p>
+      <p id="version">v1.3.0.0.beta</p>
     </nav>
   </aside>
 
