--- a/pages/QSN/index.html
+++ b/pages/QSN/index.html
@@ -21,7 +21,7 @@
           <li>Extension productivité</li>-->
           <li><a href="https://github.com/school-toolsl/horaires-lycee/discussions/new?category=ideas">Proposer une nouvelle <br>mise à jour</a></li>
         </ul>
-        <p id="version">v1.2.64.2</p>
+        <p id="version">v1.3.0.0.beta"</p>
       </nav>
     </aside>
     
